--- a/Eval.ipynb
+++ b/Eval.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import scanpy as sc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import scanpy as sc\n",
     "# import rpy2.robjects as ro\n",
     "# from rpy2.robjects import pandas2ri\n",
     "# from rpy2.robjects import conversion\n",
@@ -34,7 +34,7 @@
     "import pandas as pd\n",
     "from anndata import read_h5ad\n",
     "\n",
-    "# import dca\n",
+    "import dca\n",
     "# help(dca)\n",
     "\n",
     "# from dca.api import dca\n",
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file_path = '/Users/josephschirle/Documents/Courses/StatsM231B/Stat231B_Project/data'\n",
+    "data_file_path = './data'\n",
     "\n",
     "\n",
     "# pbmc68k_reduced_adata = sc.datasets.pbmc68k_reduced() # the 10k or 68k data may be preferred, but this is fast and I don't have to save locally\n",
@@ -71,7 +71,7 @@
     "# lopez_2022 = read_h5ad(os.path.join(data_file_path,'Lopez_2022_sln_208.h5ad'))\n",
     "# print(lopez_2022)\n",
     "\n",
-    "Gu_2024 = read_h5ad(os.path.join(data_file_path,'Gu_2024.h5ad'))"
+    "Gu_2024 = read_h5ad(os.path.join(data_file_path,'Gu_2024.h5ad'),backed = 'r')"
    ]
   },
   {
@@ -175,19 +175,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dca: Successfully preprocessed 17784 genes and 5940 cells.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From g:\\UCLA\\Classes\\Stat231B\\dca_env\\lib\\site-packages\\dca\\train.py:41: The name tf.keras.backend.set_session is deprecated. Please use tf.compat.v1.keras.backend.set_session instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dca: Calculating reconstructions...\n",
+      "WARNING: adata.X seems to be already log-transformed.\n"
+     ]
+    }
+   ],
    "source": [
-    "data_file_path = '/Users/josephschirle/Documents/Courses/StatsM231B/Stat231B_Project/data' #############\n",
+    "data_file_path = './data' #############\n",
     "\n",
-    "import tensorflow as tf\n",
-    "tf.compat.v1.disable_eager_execution()\n",
+    "# import tensorflow as tf\n",
+    "# tf.compat.v1.disable_eager_execution()\n",
     "\n",
     "\n",
     "\n",
     "# Reloading he data to denoise raw counts\n",
     "Gu_2024_denoise = read_h5ad(os.path.join(data_file_path,'Gu_2024.h5ad'))\n",
+    "\n",
+    "Gu_2024_denoise.X = np.rint(Gu_2024_denoise.X)\n",
+    "\n",
+    "\n",
     "# Remove genes with zero expression across all cells\n",
     "sc.pp.filter_genes(Gu_2024_denoise, min_counts=1)\n",
     "\n",
@@ -208,7 +236,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "🔬 Input data has 5940 cells and 17784 genes\n",
+      "🔗 Matching reference genes in the model\n",
+      "🧬 6661 features used for prediction\n",
+      "⚖️ Scaling input data\n",
+      "🖋️ Predicting labels\n",
+      "✅ Prediction done!\n"
+     ]
+    }
+   ],
    "source": [
     "model = models.Model.load(os.path.join(data_file_path,'Adult_Mouse_Gut.pkl'))  # Pretrained immune model\n",
     "predictions = celltypist.annotate(Gu_2024_denoise, model=model)\n",
@@ -217,28 +258,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "... storing 'celltypist_labels' as categorical\n"
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "# Ensure eager execution is enabled as the first action\n",
-    "tf.config.run_functions_eagerly(True)\n",
-    "\n",
-    "print(\"Eager execution status:\", tf.executing_eagerly())\n",
-    "\n",
-    "# A simple tensor operation to test eager execution\n",
-    "x = tf.constant([1, 2, 3])\n",
-    "y = tf.constant([4, 5, 6])\n",
-    "z = x + y\n",
-    "print(\"Result of x + y:\", z)\n"
+    "Gu_2024_denoise.write(os.path.join(data_file_path, 'Denoised_normalized_log_Gu_2024.h5ad'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['EarlyGC_2', 'Plasma cell', 'Activated CD4+ T cell', 'Naive B cells', 'CD4', 'DC', 'CD8+ T cell', 'PreGC', 'EarlyGC_1', 'B cell', 'pDC', 'DC (CD103+ CD11-b)', 'Stromal cell (DN)', 'lymphatic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(Gu_2024_denoise.obs[\"celltypist_labels\"].unique()))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dca_env",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
